@@ -46,11 +46,9 @@ FUSE_2.4 {
 		fuse_reply_buf;
 		fuse_reply_entry;
 		fuse_reply_err;
-		fuse_reply_getlk;
 		fuse_reply_none;
 		fuse_reply_open;
 		fuse_reply_readlink;
-		fuse_reply_statfs;
 		fuse_reply_write;
 		fuse_reply_xattr;
 		fuse_req_ctx;
@@ -65,6 +63,14 @@ FUSE_2.4 {
 		fuse_session_next_chan;
 		fuse_session_process;
 		fuse_session_reset;
+} FUSE_2.2;
+
+FUSE_2.5 {
+	global:
+		fuse_reply_statfs;
+		fuse_reply_create;
+		fuse_reply_statfs_compat;
+
 	local:
 		 *;
-} FUSE_2.2;
+} FUSE_2.4;
