@@ -1,3 +1,7 @@
+2005-11-07  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Make the statfs change backwards compatible.
+
 2005-11-06  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Change ->statfs() method to use 'struct statvfs' instead of
